--- a/bank-account/account.cmd/src/main/resources/application.yml
+++ b/bank-account/account.cmd/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
       host: localhost
       port: 27017
       database: bankAccount
+      username: root
+      password: root
   kafka:
     producer:
       bootstrap-servers: localhost:9092
