--- a/bank-account/account.query/src/main/resources/application.yml
+++ b/bank-account/account.query/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/bankAccount?createDatabaseIfNotExist=true
     username: root
-    password: techbankRootPsw
+    password: root
   kafka:
     listener:
       ack-mode: MANUAL_IMMEDIATE
