feat(account): add rebuild read database command handler

--- a/bank-account/account.cmd/src/main/resources/application.yml
+++ b/bank-account/account.cmd/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
       database: bankAccount
       username: root
       password: root
+      authentication-database: admin
   kafka:
     producer:
       bootstrap-servers: localhost:9092
